--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -17,7 +17,7 @@
                  img:   "view.png", 
                  items:
                  [ 
-//                    { id:"menu_boxes", text: "{{ "Boxes" | trans }}", img: "box.png" },
+                    { id:"menu_boxes", text: "{{ "Boxes" | trans }}", img: "box.png" },
                     { id:"menu_jobs", text: "{{ "Jobs" | trans }}", img: "job.png" },
                     { id:"menu_alarms", text: "{{ "Alarms" | trans }}", img: "alarm.png" },                    
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },                    
