--- a/Resources/views/Jobs/index.html.twig
+++ b/Resources/views/Jobs/index.html.twig
@@ -26,31 +26,12 @@ dhtmlxEvent(window,"load",function(){
     myRibbon.loadStruct("{{ url('json_ATS_ribbon') }}");
     myRibbon.attachEvent("onStateChange", StateRibbon );
     myRibbon.attachEvent("onClick", ClickRibbon );
-/*
+
     myTab = globalLayout.cells("a").attachTabbar();
-    myTab.addTab("b1","{{ "Status" | trans }}","100px", null, true);
-    myTab.addTab("b2","{{ "Folders" | trans }}","100px");
-*/
-    myJobLayout = globalLayout.cells("a").attachLayout("2E");
-    myJobLayout.cells("a").hideHeader();
-    myAlarms = myJobLayout.cells("a").attachGrid();
-    myAlarms.setImagePath( "{{ asset('bundles/ariicore/images/treegrid/') }}");
-    myAlarms.setHeader("{{ "Time" | trans }},{{ "Type" | trans }},{{ "Status" | trans }},{{ "Job" | trans }}");
-    myAlarms.attachHeader("#text_filter,#select_filter,#text_filter,#text_filter");
-    myAlarms.setInitWidths("140,0,0,*");
-    myAlarms.setColAlign("right,center,left,left");
-    myAlarms.setColTypes("ro,ro,ro,ro");
-    myAlarms.setColSorting("str,str,str,str");
-    myAlarms.enableAlterCss("","");
-    myAlarms.init();
-    myJobLayout.cells("a").progressOn();
-    myAlarms.load( "{{ url('xml_ATS_alarms_grid') }}?only_open=1", function () {
-        myJobLayout.cells("a").progressOff();
-    });
-    
-    myJobLayout.cells("b").hideHeader();
-    myJobLayout.cells("b").setHeight(350);
-    myDonut =  myJobLayout.cells("b").attachChart({
+    myTab.addTab("status","{{ "Status" | trans }}","100px", null, true);
+    myTab.addTab("alarms","{{ "Alarms" | trans }}","100px");
+
+    myDonut =  myTab.cells("status").attachChart({
             view:"donut",
             container:"pie_chart_container",
             value:"#JOBS#",
@@ -67,10 +48,25 @@ dhtmlxEvent(window,"load",function(){
                 align:"left"
             } 
     });
-    myJobLayout.cells("b").progressOn();
+    myTab.cells("status").progressOn();
     myDonut.load(  "{{ url('xml_ATS_jobs_pie') }}?box_more="+box+"&only_warning="+only_warning, function () {
-        myJobLayout.cells("b").progressOff();
+        myTab.cells("status").progressOff();
     } );
+
+    myAlarms = myTab.cells("alarms").attachGrid();
+    myAlarms.setImagePath( "{{ asset('bundles/ariicore/images/treegrid/') }}");
+    myAlarms.setHeader("{{ "Time" | trans }},{{ "Type" | trans }},{{ "Status" | trans }},{{ "Job" | trans }}");
+    myAlarms.attachHeader("#text_filter,#select_filter,#text_filter,#text_filter");
+    myAlarms.setInitWidths("140,0,0,*");
+    myAlarms.setColAlign("right,center,left,left");
+    myAlarms.setColTypes("ro,ro,ro,ro");
+    myAlarms.setColSorting("str,str,str,str");
+    myAlarms.enableAlterCss("","");
+    myAlarms.init();
+    myTab.cells("alarms").progressOn();
+    myAlarms.load( "{{ url('xml_ATS_alarms_grid') }}?only_open=1", function () {
+        myTab.cells("alarms").progressOff();
+    });
     
 /*
     myTree = myTab.cells("b2").attachTree();
@@ -307,7 +303,14 @@ function GridRefresh() {
             globalLayout.cells("a").progressOff();
 //            myTree.smartRefreshBranch(0,"{{ url('xml_ATS_jobs_tree') }}?only_warning="+only_warning);                    
             myAlarms.load( "{{ url('xml_ATS_alarms_grid') }}?only_open=1" , function () {
-                myJobLayout.cells("a").progressOff();
+                // on compte les alarmes
+                var count=myAlarms.getRowsNum();
+                if (count>0) {                    
+                    myTab.cells('alarms').setText("{{ "Alarms" | trans }} [<font color='red'>"+count+"</font>]");
+                }
+                else {
+                    myTab.cells('alarms').setText("{{ "Alarms" | trans }}");
+                }
             });
         });
     });    
@@ -453,17 +456,17 @@ function LogDetail(id) {
 
 function EditNote(jobname,description) {
     var dhxWins = new dhtmlXWindows();
-    var largeur = 800;
+    var largeur = 940;
     var myWin = dhxWins.createWindow( "note" ,  (document.body.offsetWidth-largeur)/2, 50, largeur, 700 );
     myWin.setText("{{ "Note" | trans }} "+jobname);
    
     var formData = [
         {   type: 'settings', 
-            labelWidth: 100, 
-            inputWidth: largeur - 200, 
+            labelWidth: 80, 
+            inputWidth: largeur - 150, 
             labelAlign: "right", 
             position: "label-left" },
-        { type: "input", name: "ID"},
+        { type: "hidden", name: "ID"},
         { type: "input",
           name: "JOB_NAME",
           label: "{{ "Name"| trans }}",
@@ -496,6 +499,8 @@ function EditNote(jobname,description) {
                             labelAlign: "right"
                         },
                         {   type: 'editor', 
+                            toolbar: true,
+                            iconsPath: "{{ asset('dhtmlx/skins/terrace/imgs/') }}",
                             name: 'JOB_NOTE',
                             label: "{{ "Note"| trans }}", 
                             inputHeight:400
@@ -523,7 +528,6 @@ function EditNote(jobname,description) {
     });
     
     myFormWin = myWin.attachForm(formData);
-    alert("{{ url('xml_ATS_note_form') }}?job="+jobname);
     myFormWin.load("{{ url('xml_ATS_note_form') }}?job="+jobname);
     myFormToolbar.attachEvent("onClick",function (itemid) {
          switch (itemid) {
