--- a/Resources/views/Box/bootstrap.html.twig
+++ b/Resources/views/Box/bootstrap.html.twig
@@ -5,13 +5,18 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-theme.min.css') }}">
 <!-- Latest compiled and minified JavaScript -->
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('bundles/ariiats/js/jquery.tablesorter.min.js') }}"></script>
 <title>{{ Box.job_name }}</title>
+<style>
+img {
+    height: 100%;
+    width: auto;
+}
+</style>
 {% endblock %} 
 {% block body %}
-<body>
 <div class="container-fluid">
 <div class="jumbotron">
 <img style="float: right;" src="{{ asset('logo.png') }}"/>
@@ -23,6 +28,7 @@
 {% if Box.as_group != '' %}
   <button type="button" class="btn btn-info">{{ Box.as_group }}</button>
 {% endif %}
+</div>
 </div>
 
 {% if Box.date_conditions==1 %}
@@ -53,16 +59,23 @@
 {% endif %}
     
 <h2>{{ "Diagram" | trans }}</h2>
-<img src="{{ url('arii_ATS_generate') }}?id={{ Box.joid }}&output=png&fields=MACHINE,PROFILE" alt="{{ Box.job_name }}" class="img-responsive">
-
+<img style="float:right" src="{{ url('arii_ATS_generate') }}?id={{ Box.joid }}&output=png&fields=MACHINE,PROFILE" alt="{{ Box.job_name }}">
+    
 <h2>{{ "Jobs" | trans }}</h2>
 
 {% for Step,Job in Jobs %}
-<h3>{{ Job.job_name }}</h3>
+    
+<h3>
+{% if Job.job_type == 98 %}
+<img src="{{ asset("/bundles/ariiats/images/big/box.png") }}"/>
+{% else %}
+<img src="{{ asset("/bundles/ariiats/images/big/cmd.png") }}"/>
+{% endif %}
+{{ Job.job_name }}
+</h3>
 {% if Job.description is not empty %}
 <blockquote>
 <p>{{ Job.description }}</p>
-</blockquote>
 {% endif %}
 
 {% if Job.NOTE is not empty %}
@@ -80,17 +93,18 @@
                 </div>                
             {% endfor %}
         {% else %}
-            <div class="alert alert-danger">{{ "No doc found" | trans }}</div>
+            <div class="alert alert-warning">{{ "No doc found" | trans }}</div>
         {% endif %}
     {% endif %}
 {% endif %}
-<table class="table table-striped table-bordered table-condensed">
-<tr><th class="col-md-2">{{ "Run machine" | trans }}</th><td class="col-md-8">{{ Job.run_machine }}</td></tr>
+<table >
 <tr><th class="col-md-2">{{ "Owner" | trans }}</th><td class="col-md-8">{{ Job.owner }}</td></tr>
-<tr><th class="col-md-2">{{ "Command" | trans }}</th><td class="col-md-8">{{ Job.command }}</td></tr>
 </table>
+
+{% if Job.job_type == 98 %}
+{ { render ( controller('AriiATSBundle:Box:doc',{ 'id':  0  } )) } }
+{% endif %}
+</blockquote>
 {% endfor %}
 <span class="badge badge-danger">{{ Box.joid }}</span>
-</script>
-</body>
 {% endblock %}
